--- a/vc2013/toon2_matching_room.vcxproj.filters
+++ b/vc2013/toon2_matching_room.vcxproj.filters
@@ -1,10 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
@@ -51,9 +47,6 @@
     <ClInclude Include="..\include\Resources.h">
       <Filter>Include Files</Filter>
     </ClInclude>
-    <ClCompile Include="..\src\toon2_matching_roomApp.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClInclude Include="..\cinder_cocoslike\action\action.h">
       <Filter>cinder_cocoslike\action</Filter>
     </ClInclude>
@@ -267,6 +260,12 @@
     <ClInclude Include="..\src\user\noticed\receive_data_resend.h">
       <Filter>User Files\user\noticed</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\user\noticed\host_connection.h">
+      <Filter>User Files\user\noticed</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\user\noticed\close.h">
+      <Filter>User Files\user\noticed</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h">
@@ -451,6 +450,12 @@
       <Filter>User Files\user\noticed</Filter>
     </ClCompile>
     <ClCompile Include="..\src\user\noticed\receive_data_resend.cpp">
+      <Filter>User Files\user\noticed</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\user\noticed\host_connection.cpp">
+      <Filter>User Files\user\noticed</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\user\noticed\close.cpp">
       <Filter>User Files\user\noticed</Filter>
     </ClCompile>
   </ItemGroup>
