--- a/vc2015/toon2_matching_room.vcxproj
+++ b/vc2015/toon2_matching_room.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="..\cinder_cocoslike\action\spawn.cpp" />
     <ClCompile Include="..\cinder_cocoslike\action\timeline.cpp" />
     <ClCompile Include="..\cinder_cocoslike\app_delegate.cpp" />
+    <ClCompile Include="..\cinder_cocoslike\audio\base_player.cpp" />
     <ClCompile Include="..\cinder_cocoslike\audio\buffer_player.cpp" />
     <ClCompile Include="..\cinder_cocoslike\audio\file_player.cpp" />
     <ClCompile Include="..\cinder_cocoslike\network\client_handle.cpp" />
@@ -162,11 +163,11 @@
     <ClCompile Include="..\cinder_cocoslike\utility\write_file_on_destroyed.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\user\default_scene.cpp" />
+    <ClCompile Include="..\src\user\noticed\check_handle.cpp" />
     <ClCompile Include="..\src\user\noticed\close.cpp" />
+    <ClCompile Include="..\src\user\noticed\feed_captured.cpp" />
     <ClCompile Include="..\src\user\noticed\find_room.cpp" />
-    <ClCompile Include="..\src\user\noticed\host_connection.cpp" />
     <ClCompile Include="..\src\user\noticed\noticed_base.cpp" />
-    <ClCompile Include="..\src\user\noticed\receive_data_resend.cpp" />
     <ClCompile Include="..\src\user\receive_data_execute.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -195,6 +196,7 @@
     <ClInclude Include="..\cinder_cocoslike\action\timeline.h" />
     <ClInclude Include="..\cinder_cocoslike\app_delegate.h" />
     <ClInclude Include="..\cinder_cocoslike\audio.hpp" />
+    <ClInclude Include="..\cinder_cocoslike\audio\base_player.h" />
     <ClInclude Include="..\cinder_cocoslike\audio\buffer_player.h" />
     <ClInclude Include="..\cinder_cocoslike\audio\file_player.h" />
     <ClInclude Include="..\cinder_cocoslike\cocoslike.hpp" />
@@ -236,13 +238,14 @@
     <ClInclude Include="..\cinder_cocoslike\utility\write_file_on_destroyed.h" />
     <ClInclude Include="..\include\Resources.h" />
     <ClInclude Include="..\src\main.h" />
+    <ClInclude Include="..\src\user\connection_handle.h" />
     <ClInclude Include="..\src\user\default_scene.h" />
     <ClInclude Include="..\src\user\noticed.hpp" />
+    <ClInclude Include="..\src\user\noticed\check_handle.h" />
     <ClInclude Include="..\src\user\noticed\close.h" />
+    <ClInclude Include="..\src\user\noticed\feed_captured.h" />
     <ClInclude Include="..\src\user\noticed\find_room.h" />
-    <ClInclude Include="..\src\user\noticed\host_connection.h" />
     <ClInclude Include="..\src\user\noticed\noticed_base.h" />
-    <ClInclude Include="..\src\user\noticed\receive_data_resend.h" />
     <ClInclude Include="..\src\user\receive_data_execute.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
