プレイヤーのキル情報を送るようにしました。
他の人には送っていませんが、close命令が通るので大丈夫だと思います。

プレイヤーが短い時間でログインすると、同じ場所にスポーンする問題を対処しました。
Rand(getElapsedSeconds())になっていたので、そりゃあそうですよね。

--- a/vc2015/toon2_matching_room.vcxproj
+++ b/vc2015/toon2_matching_room.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="..\src\user\noticed\find_room.cpp" />
     <ClCompile Include="..\src\user\noticed\ground.cpp" />
     <ClCompile Include="..\src\user\noticed\noticed_base.cpp" />
+    <ClCompile Include="..\src\user\noticed\player_on_captured.cpp" />
     <ClCompile Include="..\src\user\receive_data_execute.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -248,6 +249,7 @@
     <ClInclude Include="..\src\user\noticed\find_room.h" />
     <ClInclude Include="..\src\user\noticed\ground.h" />
     <ClInclude Include="..\src\user\noticed\noticed_base.h" />
+    <ClInclude Include="..\src\user\noticed\player_on_captured.h" />
     <ClInclude Include="..\src\user\receive_data_execute.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
