グラウンドの色管理をground_color_managerに移行。
バレットのデータを受信して、サーバー側でも塗るようにしました。

--- a/vc2015/toon2_matching_room.vcxproj
+++ b/vc2015/toon2_matching_room.vcxproj
@@ -137,7 +137,9 @@
     <ClCompile Include="..\cinder_cocoslike\network\network_factory.cpp" />
     <ClCompile Include="..\cinder_cocoslike\network\network_object.cpp" />
     <ClCompile Include="..\cinder_cocoslike\network\tcp_client.cpp" />
+    <ClCompile Include="..\cinder_cocoslike\network\tcp_client_member.cpp" />
     <ClCompile Include="..\cinder_cocoslike\network\tcp_server.cpp" />
+    <ClCompile Include="..\cinder_cocoslike\network\tcp_server_member.cpp" />
     <ClCompile Include="..\cinder_cocoslike\network\udp_connection.cpp" />
     <ClCompile Include="..\cinder_cocoslike\network\udp_connection_member.cpp" />
     <ClCompile Include="..\cinder_cocoslike\network\use_destroy_object.cpp" />
@@ -162,9 +164,13 @@
     <ClCompile Include="..\cinder_cocoslike\utility\utf8.cpp" />
     <ClCompile Include="..\cinder_cocoslike\utility\write_file_on_destroyed.cpp" />
     <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="..\src\user\bullet.cpp" />
+    <ClCompile Include="..\src\user\bullet_manager.cpp" />
     <ClCompile Include="..\src\user\default_scene.cpp" />
+    <ClCompile Include="..\src\user\ground_color_manager.cpp" />
     <ClCompile Include="..\src\user\noticed\check_handle.cpp" />
     <ClCompile Include="..\src\user\noticed\close.cpp" />
+    <ClCompile Include="..\src\user\noticed\create_bullet.cpp" />
     <ClCompile Include="..\src\user\noticed\feed_captured.cpp" />
     <ClCompile Include="..\src\user\noticed\find_room.cpp" />
     <ClCompile Include="..\src\user\noticed\ground.cpp" />
@@ -210,7 +216,9 @@
     <ClInclude Include="..\cinder_cocoslike\network\network_factory.h" />
     <ClInclude Include="..\cinder_cocoslike\network\network_object.h" />
     <ClInclude Include="..\cinder_cocoslike\network\tcp_client.h" />
+    <ClInclude Include="..\cinder_cocoslike\network\tcp_client_member.h" />
     <ClInclude Include="..\cinder_cocoslike\network\tcp_server.h" />
+    <ClInclude Include="..\cinder_cocoslike\network\tcp_server_member.h" />
     <ClInclude Include="..\cinder_cocoslike\network\udp_connection.h" />
     <ClInclude Include="..\cinder_cocoslike\network\udp_connection_member.h" />
     <ClInclude Include="..\cinder_cocoslike\network\use_destroy_object.h" />
@@ -240,11 +248,15 @@
     <ClInclude Include="..\cinder_cocoslike\utility\write_file_on_destroyed.h" />
     <ClInclude Include="..\include\Resources.h" />
     <ClInclude Include="..\src\main.h" />
+    <ClInclude Include="..\src\user\bullet.h" />
+    <ClInclude Include="..\src\user\bullet_manager.h" />
     <ClInclude Include="..\src\user\connection_handle.h" />
     <ClInclude Include="..\src\user\default_scene.h" />
+    <ClInclude Include="..\src\user\ground_color_manager.h" />
     <ClInclude Include="..\src\user\noticed.hpp" />
     <ClInclude Include="..\src\user\noticed\check_handle.h" />
     <ClInclude Include="..\src\user\noticed\close.h" />
+    <ClInclude Include="..\src\user\noticed\create_bullet.h" />
     <ClInclude Include="..\src\user\noticed\feed_captured.h" />
     <ClInclude Include="..\src\user\noticed\find_room.h" />
     <ClInclude Include="..\src\user\noticed\ground.h" />
