--- a/vc2015/toon2_matching_room.vcxproj
+++ b/vc2015/toon2_matching_room.vcxproj
@@ -157,7 +157,9 @@
     <ClCompile Include="..\cinder_cocoslike\scene.cpp" />
     <ClCompile Include="..\cinder_cocoslike\scene_manager.cpp" />
     <ClCompile Include="..\cinder_cocoslike\user_default.cpp" />
+    <ClCompile Include="..\cinder_cocoslike\utility\base64.cpp" />
     <ClCompile Include="..\cinder_cocoslike\utility\collision.cpp" />
+    <ClCompile Include="..\cinder_cocoslike\utility\file_system.cpp" />
     <ClCompile Include="..\cinder_cocoslike\utility\recursion_usable_mutex.cpp" />
     <ClCompile Include="..\cinder_cocoslike\utility\scoped_mutex.cpp" />
     <ClCompile Include="..\cinder_cocoslike\utility\string_utility.cpp" />
@@ -167,6 +169,8 @@
     <ClCompile Include="..\src\user\bullet.cpp" />
     <ClCompile Include="..\src\user\bullet_manager.cpp" />
     <ClCompile Include="..\src\user\default_scene.cpp" />
+    <ClCompile Include="..\src\user\feed.cpp" />
+    <ClCompile Include="..\src\user\feed_manager.cpp" />
     <ClCompile Include="..\src\user\ground_color_manager.cpp" />
     <ClCompile Include="..\src\user\noticed\blowout.cpp" />
     <ClCompile Include="..\src\user\noticed\check_handle.cpp" />
@@ -178,6 +182,8 @@
     <ClCompile Include="..\src\user\noticed\noticed_base.cpp" />
     <ClCompile Include="..\src\user\noticed\player_on_captured.cpp" />
     <ClCompile Include="..\src\user\receive_data_execute.cpp" />
+    <ClCompile Include="..\src\user\user_handle.cpp" />
+    <ClCompile Include="..\src\user\user_handle_manager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\cinder_cocoslike\action.hpp" />
@@ -240,7 +246,9 @@
     <ClInclude Include="..\cinder_cocoslike\user_default.h" />
     <ClInclude Include="..\cinder_cocoslike\utility.hpp" />
     <ClInclude Include="..\cinder_cocoslike\utility\assert_log.h" />
+    <ClInclude Include="..\cinder_cocoslike\utility\base64.h" />
     <ClInclude Include="..\cinder_cocoslike\utility\collision.h" />
+    <ClInclude Include="..\cinder_cocoslike\utility\file_system.h" />
     <ClInclude Include="..\cinder_cocoslike\utility\recursion_usable_mutex.h" />
     <ClInclude Include="..\cinder_cocoslike\utility\scoped_mutex.h" />
     <ClInclude Include="..\cinder_cocoslike\utility\string_utility.h" />
@@ -251,8 +259,10 @@
     <ClInclude Include="..\src\main.h" />
     <ClInclude Include="..\src\user\bullet.h" />
     <ClInclude Include="..\src\user\bullet_manager.h" />
-    <ClInclude Include="..\src\user\connection_handle.h" />
+    <ClInclude Include="..\src\user\user_handle.h" />
     <ClInclude Include="..\src\user\default_scene.h" />
+    <ClInclude Include="..\src\user\feed.h" />
+    <ClInclude Include="..\src\user\feed_manager.h" />
     <ClInclude Include="..\src\user\ground_color_manager.h" />
     <ClInclude Include="..\src\user\noticed.hpp" />
     <ClInclude Include="..\src\user\noticed\blowout.h" />
@@ -265,6 +275,7 @@
     <ClInclude Include="..\src\user\noticed\noticed_base.h" />
     <ClInclude Include="..\src\user\noticed\player_on_captured.h" />
     <ClInclude Include="..\src\user\receive_data_execute.h" />
+    <ClInclude Include="..\src\user\user_handle_manager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
