--- a/vc2017/toon2_server.vcxproj.filters
+++ b/vc2017/toon2_server.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="..\src\user\user_handle_manager.h">
       <Filter>Source Files\user</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\user\bullet_straight.h">
+      <Filter>Source Files\user</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h">
@@ -150,6 +153,9 @@
       <Filter>Source Files\user</Filter>
     </ClCompile>
     <ClCompile Include="..\src\user\user_handle_manager.cpp">
+      <Filter>Source Files\user</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\user\bullet_straight.cpp">
       <Filter>Source Files\user</Filter>
     </ClCompile>
   </ItemGroup>
